test/errors/error16.sp
%t contains a number not in nat
#maxint=5.
sorts
#s={1,3}. 
predicates
p(#s).
rules
p(1*2).
